deploy/cfn_main1.yaml

AWSTemplateFormatVersion: 2010-09-09

Parameters:
  KeyName:
    Description: The key for ec2 instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  ElasticIp:
    Description: elastic-ip
    Type: 'AWS::SSM::Parameter::Value<String>'
    Default: elastic-ip


  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: t2.small


    AllowedValues:
    - t1.micro
    - t2.nano
    - t2.micro
    - t2.small
    - t2.medium
  Imageid:
    Description: image 
    Type: String
    Default : ami-0186908e2fdeea8f3

  SSHLocation:
    Description: ' The IP address range that can be used to SSH to the EC2 instances'
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.

Resources:
  EC2Instance:
    Type: AWS::EC2::Instance
     
    Properties:
      InstanceType:
        Ref: InstanceType
      SecurityGroups:
      - Ref: InstanceSecurityGroup
      KeyName:
        Ref: KeyName
      ImageId:
        Ref : Imageid  
      UserData:
        Fn::Base64: 
          !Sub |
            #!/bin/bash -xe
            
            yum update -y 
            yum install docker -y 
            service docker start
            usermod -a -G docker ec2-user
            docker pull mayccc/insurance-quote
            docker run -p 3000:5000 mayccc/insurance-quote&

  IPAssoc:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: !Ref 'EC2Instance'
      EIP: !Ref 'ElasticIp'


      
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '3000'
        ToPort: '3000'
        CidrIp:
          Ref: SSHLocation
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp:
          Ref: SSHLocation


Outputs:
  InstanceId:
    Description: InstanceId of the newly created EC2 instance
    Value: !Ref 'EC2Instance'
